# simple-repositories-cli

./: Cargo.toml  directory_tree.json
src/: cli.rs  fs_traversal.rs  lib.rs  main.rs
src/api/: auth_client.rs  mod.rs
src/core/: commit_builder.rs  config.rs  mod.rs
src/env/: dir_search.rs  init_simrep.rs  mod.rs  system_search.rs
src/error/: error_handler.rs  mod.rs
src/json_writer/: auth_writer.rs  branch_writer.rs  commit_writer.rs  directory_tree_writer.rs  mod.rs
src/model/: auth.rs  branch.rs  commit.rs  directory_node.rs  file_node.rs  mod.rs  project.rs
src/output/: print.rs
